nginx/deployment/ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-customer-service
  namespace: customers
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ms-customer
